2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* control-center-categories.c: (populate_category):
	* control-center.c: (main):
	* gnomecc-canvas.c: (setup_entry), (cb_canvas_event),
	(gnomecc_canvas_item_accessible_class_init),
	(gnomecc_canvas_accessible_class_init),
	(gnomecc_canvas_accessible_add_selection):
	* gnomecc-rounded-rect.c: Remove some unused code.

2005-10-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* control-center-categories.[ch] (control_center_reload_icons): added
	to reload icons if gtk theme changes
	* gnomecc-canvas.c: switch correctly both shell background and icons
	in case of theme change. Plugged a memleak on finalize

2005-10-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.c: calculate item widths instead of forcing them to
	be MAX_ITEM_WIDTH, wrap labels with PANGO_WRAP_WORD, this closes
	#319492. force canvas background to base[GTK_STATE_NORMAL], do not 
	repaint canvas background, this way it feels quite quicker when
	resizing the window.

2005-10-19  Carlos Garnacho Parro  <carlosg@gnome.org>

	* control-center.c: set the adjustments, so the GtkScrollBar arrows
	works again, set initial adjustment to view the top of the canvas.

2005-10-15  Rodrigo Moya <rodrigo@novell.com>

	Fixes #315505

	* control-center-categories.c (control_center_entry_new): don't show
	xscreensaver capplet icon if gnome-screensaver is installed.
	(populate_category): don't add NULL entries to the list.

2005-06-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.c: added a11y support

2005-05-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.[ch]: new widget that inherits from GnomeCanvas, the
	drawing logic has been mostly moved from control-center.c, but the
	layout function has been quite improved (now handles RTL/LTR
	correctly, assigns a fixed width to all items and caches some things
	to make things a bit faster)
	
	* control-center.c: removed canvas drawing logic, and use the new
	widget
