@@ -1,3 +1,9 @@
+2006-01-01  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* gnomecc-canvas.[ch]: added method for setting single click policy
+	* control-center.c: track for changes in the nautilus click_policy key
+	to make g-c-c behave exactly like nautilus
+
 2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* control-center-categories.c: (populate_category):
